--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -2,10 +2,10 @@
   <div class="breadcrumb_bg">
     <ol class="breadcrumb container">
       <li>
-        <%= link_to "Projects", projects_path, target: "_self" %>
+        <%= link_to t('.projects'), projects_path, target: "_self" %>
       </li>
       <li><%= link_to truncate(@project.title, length: 30), @project, target: "_self" %></li>
-      <li>Stage 1</li>
+      <li><%= t('.stage1') %></li>
     </ol>
   </div>
 <% end %>
@@ -13,65 +13,65 @@
 <div class="container main">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
-      <h3>What problems you want to address? What policy change you aim to achieve?</h3>
+      <h3><%= t('.title') %></h3>
       <ul class="nav nav-stacked">
-        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> Which real-world problem children are facing that you want to address?</a></li>
-        <li><a href="#"><i class="fa fa-check-circle"></i> Which real-world problem children are facing that you want to address?</a></li>
-        <li><a href="#"><i class="fa fa-check-circle"></i> Which policy solutions would constitute an appropriate response?</a></li>
+        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle1') %></a></li>
+        <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle2') %></a></li>
+        <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle3') %></a></li>
       </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-      <h2>What problems you want to address? What policy change you aim to achieve?</h2>
-      <p>The foundation of an effective advocacy strategy is a common understanding of the main problems that affect children, their policy dimensions and related policy solutions. It is important you take time to go through this discussion because without a clear, articulated issue and well-defined problems and solutions the remaining parts of the strategy will lose focus.</p>
+      <h2><%= t('.title') %></h2>
+      <p><%= t('.description') %></p>
       <div role="tabpanel" class="tabpanel">
-        <!-- Nav tabs -->
+        <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab">Explanation & Examples</a></li>
-          <li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
+          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
+          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
+          <li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab"><%= t('.workshop_tips') %></a></li>
         </ul>
-        <!-- Tab panes -->
+        <!-- tab panes -->
         <div class="tab-content" ng-controller="stage1Ctrl">
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="bg_grey" id='real-problem'>
               <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
               <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)">{{ btn_problem }}</button>
-              <h4>Which real-world problem children are facing that you want to address? <span ng-if="problem.id"><i class="fa fa-info-circle" title="A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"></i></span></h4>
+              <h4><%= t('.subtitle1') %> <span ng-if="problem.id"><i class="fa fa-info-circle" title="<%= t('.subtitle1_tooltip') %>"></i></span></h4>
               <p ng-if="!problem.id">
-                A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)
+                <%= t('.subtitle1_explanation') %>
               </p>
               <span ng-if="problem.id">
-                <p class="bold">Problem</p>
+                <p class="bold"><%= t('.problem') %></p>
                 <p>{{ problem.title }}</p>
-                <p class="bold">Description</p>
+                <p class="bold"><%= t('.description') %></p>
                 <p>{{ problem.description }}</p>
-                <p class="bold">Focus Area</p>
+                <p class="bold"><%= t('.focus_area') %></p>
                 <p>{{ problem.focus_area }}</p>
               </span>
               <%= render "real_problem_modal" %>
             </div>
             <div id="policy-problems">
               <div class="bg_grey" ng-if="problem.id">
-                  <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()">Add</button>
-                  <h4>Which are the policy-related causes of the real-world problem? <span ng-if="policies"><i class="fa fa-info-circle" title="Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"></i></span></h4>
+                  <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><%= t('.add_button') %></button>
+                  <h4><%= t('.subtitle2') %> <span ng-if="policies"><i class="fa fa-info-circle" title="<%= t('.subtitle2_tooltip') %>"></i></span></h4>
               </div>
             </div>
             <p ng-if="!policies">
-              Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem
+              <%= t('.policies_text') %>
             </p>
             <!-- policy solution -->
             <div class="panel panel-default objetives" ng-repeat="policy in policies">
               <div class="panel-heading">
-                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)">Edit</button>
-                <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)">Delete</button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)"><%= t('.edit_button') %></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)"><%= t('.delete_button') %></button>
                 <h4 class="panel-title"><a data-toggle="collapse" href="#objetive-{{policy.id}}" aria-expanded="false" aria-controls="collapseExample">{{ policy.title }}</a></h4>
               </div>
               <!-- policy solutions -->
               <div class="collapse in" id="objetive-{{policy.id}}">
-                <button type="button" class="btn btn-info pull-right" ng-click="add_edit_solution(policy.id)">Add</button>
-                <h4>Which policy solutions would constitute an appropriate response? <span ng-if="policy.solutions"><i class="fa fa-info-circle" title="What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?"></i></span></h4>
+                <button type="button" class="btn btn-info pull-right" ng-click="add_edit_solution(policy.id)"><%= t('.add_button') %></button>
+                <h4><%= t('.subtitle3') %> <span ng-if="policy.solutions"><i class="fa fa-info-circle" title="<%= t('.subtitle3_tooltip') %>"></i></span></h4>
                 <p ng-if="policy.solutions.length == 0">
-                  What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?
+                  <%= t('.subtitle3_tooltip') %>
                 </p>
                 <table class="table">
                   <tbody>
@@ -95,7 +95,7 @@
           <div role="tabpanel" class="tab-pane" id="explanation">
             <%= render 'explanation' %>
           </div>
-          <div role="tabpanel" class="tab-pane" id="explanation">workshop tips</div>
+          <div role="tabpanel" class="tab-pane" id="explanation"><%= t('.workshop_tips') %></div>
         </div>
       </div>
     </div>
