--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -2,10 +2,10 @@
   <div class="breadcrumb_bg">
     <ol class="breadcrumb container">
       <li>
-        <%= link_to "Projects", projects_path, target: "_self" %>
+        <%= link_to t('.projects'), projects_path, target: "_self" %>
       </li>
       <li><%= link_to truncate(@project.title, length: 30), @project, target: "_self" %></li>
-      <li>Stage 4</li>
+      <li><%= t('.stage4') %></li>
     </ol>
   </div>
 <% end %>
@@ -13,34 +13,34 @@
 <div class="container main">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
-      <h3>Which steps will lead you to the achievement of your advocacy objectives?</h3>
+      <h3><%= t('.title') %></h3>
       <ul class="nav nav-stacked">
-        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> Define Interim Outcomes</a></li>
+        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle1') %></a></li>
       </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-      <h2>Which steps will lead you to the achievement of your advocacy objectives?</h2>
-      <p>At this point in the planning process, the analysis necessary to underpin your advocacy strategy is complete. Hence, now it is time to use that analysis to guide the definition of the shorter-term results that must be achieved in order to reach the advocacy objective. These are your advocacy interim outcomes and when arranged sequencially they will describe the plausible path of how you envision that the policy change you are seeking will take place as a result of your advocacy.</p>
+      <h2><%= t('.subtitle1') %></h2>
+      <p><%= t('.subtitle1_explanation') %></p>
       <div role="tabpanel" class="tabpanel">
-        <!-- Nav tabs -->
+        <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab">Explanation & Examples</a></li>
+          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
+          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
         </ul>
-        <!-- Tab panes -->
+        <!-- tab panes -->
         <div class="tab-content" ng-controller="stage4Ctrl">
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="bg_grey">
-              <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()">Add</button>
-              <h4>Define Interim Outcomes <i class="fa fa-info-circle" title="The interim outcomes refer to changes in the target audiences/critical players´attitudes, beliefs or behaviours."></i></h4>
+              <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><%= t('.add_button') %></button>
+              <h4><%= t('.subtitle1') %> <i class="fa fa-info-circle" title="<%= t('.subtitle1_tooltip') %>"></i></h4>
               <table class="table">
                 <thead>
                   <tr>
-                    <th>Interim Outcome</th>
-                    <th>Interim Outcome Type</th>
-                    <th>Actor Type</th>
-                    <th>Activities Number</th>
-                    <th class="text-right">Actions</th>
+                    <th><%= t('.interim_outcome') %></th>
+                    <th><%= t('.interim_outcome_type') %></th>
+                    <th><%= t('.actor_type') %></th>
+                    <th><%= t('.activities_number') %></th>
+                    <th class="text-right"><%= t('.actions') %></th>
                   </tr>
                 </thead>
                 <tbody>
