--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -1,24 +1,24 @@
 <script type="text/ng-template" id="activities-aside.html">
   <div class="modal-header">
-    <h3 class="modal-title">Activities</h3>
+    <h3 class="modal-title"><%= t('.activities') %></h3>
   </div>
   <div class="modal-body">
     <div class="form-group">
-      <label for="title">Title</label>
-      <input name="title" class="form-control" ng-model="current_activity.title" placeholder="Enter a title for an activity">
+      <label for="title"><%= t('.title') %></label>
+      <input name="title" class="form-control" ng-model="current_activity.title" placeholder="<%= t('.title_placeholder') %>">
     </div>
     <div class="form-group">
-      <label for="description">Description</label>
-      <textarea name="description" class="form-control" ng-model="current_activity.description" placeholder="Enter a description for an activity"></textarea>
+      <label for="description"><%= t('.description') %></label>
+      <textarea name="description" class="form-control" ng-model="current_activity.description" placeholder="<%= t('.description_placeholder') %>"></textarea>
     </div>
   </div>
   <div class="form-group">
-    <label for="outcome">Outcome</label>
+    <label for="outcome"><%= t('.outcome') %></label>
     <select class="form-control" name="outcome_ids" multiple="multiple" ng-multiple="true" ng-model="current_activity.outcome_ids" ng-options="outcome.id as outcome.description for outcome in outcomes">
     </select>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: current_activity.title == ''}">Save</button>
-    <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
+    <button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: current_activity.title == ''}"><%= t('.save_button') %></button>
+    <button class="btn btn-warning" ng-click="cancel($event)"><%= t('.cancel_button') %></button>
   </div>
 </script>
