--- a/app/views/projects/_objective_modal.html.erb
+++ b/app/views/projects/_objective_modal.html.erb
@@ -28,11 +28,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="big-difference">Score</label>
-					<input type="number" class="form-control" id="big-difference-score" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.big_difference_score">
+					<input type="number" class="form-control" id="big-difference-score" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.big_difference_score">
 				</div>
 				<div class="form-group">
 					<label for="big-difference-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="big-difference-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.big_difference_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="big-difference-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.big_difference_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -44,11 +44,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="multiplying-effect">Score</label>
-					<input type="number" class="form-control" id="multiplying-effect" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.multiplying_effect_score">
+					<input type="number" class="form-control" id="multiplying-effect" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.multiplying_effect_score">
 				</div>
 				<div class="form-group">
 					<label for="multiplying-effect-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="multiplying-effect-arguments" placeholder="Enter Multiplying Effect" ng-model="current_objective.evaluation.multiplying_effect_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="multiplying-effect-arguments" placeholder="Enter Multiplying Effect" ng-model="current_objective.multiplying_effect_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -60,11 +60,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="catalytic">Score</label>
-					<input type="number" class="form-control" id="catalytic" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.catalytic_score">
+					<input type="number" class="form-control" id="catalytic" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.catalytic_score">
 				</div>
 				<div class="form-group">
 					<label for="catalytic-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="catalytic-arguments" placeholder="Enter Multiplying Effect" ng-model="current_objective.evaluation.catalytic_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="catalytic-arguments" placeholder="Enter Multiplying Effect" ng-model="current_objective.catalytic_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -86,11 +86,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="demand">Score</label>
-					<input type="number" class="form-control" id="demand" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.demand_score">
+					<input type="number" class="form-control" id="demand" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.demand_score">
 				</div>
 				<div class="form-group">
 					<label for="demand-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="demand-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.demand_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="demand-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.demand_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -106,11 +106,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="hooks-processes">Score</label>
-					<input type="number" class="form-control" id="hooks-processes" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.hooks_processes_score">
+					<input type="number" class="form-control" id="hooks-processes" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.hooks_processes_score">
 				</div>
 				<div class="form-group">
 					<label for="hooks-processes-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="hooks-processes-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.hooks_processes_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="hooks-processes-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.hooks_processes_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -126,11 +126,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="intuitive">Score</label>
-					<input type="number" class="form-control" id="intuitive" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.intuitive_score">
+					<input type="number" class="form-control" id="intuitive" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.intuitive_score">
 				</div>
 				<div class="form-group">
 					<label for="intuitive-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="intuitive-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.intuitive_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="intuitive-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.intuitive_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -154,11 +154,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="alignment">Score</label>
-					<input type="number" class="form-control" id="alignment" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.alignment_score">
+					<input type="number" class="form-control" id="alignment" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.alignment_score">
 				</div>
 				<div class="form-group">
 					<label for="alignment-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="alignment-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.alignment_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="alignment-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.alignment_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -176,11 +176,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="added-value">Score</label>
-					<input type="number" class="form-control" id="added-value" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.added_value_score">
+					<input type="number" class="form-control" id="added-value" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.added_value_score">
 				</div>
 				<div class="form-group">
 					<label for="added-value-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="added-value-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.added_value_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="added-value-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.added_value_arguments"></textarea>
 				</div>
 			</div>
 		</div>
@@ -198,11 +198,11 @@
 			<div class="col-md-8">
 				<div class="form-group">
 					<label for="loss-or-gain">Score</label>
-					<input type="number" class="form-control" id="loss-or-gain" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.loss_gain_score">
+					<input type="number" class="form-control" id="loss-or-gain" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.loss_gain_score">
 				</div>
 				<div class="form-group">
 					<label for="loss-or-gain-arguments">Main arguments</label>
-					<textarea class="form-control" rows="3" id="loss-or-gain-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.loss_gain_arguments"></textarea>
+					<textarea class="form-control" rows="3" id="loss-or-gain-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.loss_gain_arguments"></textarea>
 				</div>
 			</div>
 		</div>
