--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -77,10 +77,10 @@
 								<tbody>
 									<tr ng-repeat="objective in objectives">
 										<td>{{objective.title}}</td>
-										<td class="text-center">{{ objective.evaluation.big_difference_score + objective.evaluation.multiplying_effect_score + objective.evaluation.catalytic_score }}</td>
-										<td class="text-center">{{ objective.evaluation.demand_score + objective.evaluation.hooks_processes_score + objective.evaluation.intuitive_score }}</td>
-										<td class="text-center">{{ objective.evaluation.alignment_score + objective.evaluation.added_value_score + objective.evaluation.loss_gain_score }}</td>
-										<td class="text-center">{{ objective.evaluation.big_difference_score + objective.evaluation.multiplying_effect_score + objective.evaluation.catalytic_score + objective.evaluation.demand_score + objective.evaluation.hooks_processes_score + objective.evaluation.intuitive_score + objective.evaluation.alignment_score + objective.evaluation.added_value_score + objective.evaluation.loss_gain_score }}</td>
+										<td class="text-center">{{ objective.big_difference_score + objective.multiplying_effect_score + objective.catalytic_score }}</td>
+										<td class="text-center">{{ objective.demand_score + objective.hooks_processes_score + objective.intuitive_score }}</td>
+										<td class="text-center">{{ objective.alignment_score + objective.added_value_score + objective.loss_gain_score }}</td>
+										<td class="text-center">{{ objective.big_difference_score + objective.multiplying_effect_score + objective.catalytic_score + objective.demand_score + objective.hooks_processes_score + objective.intuitive_score + objective.alignment_score + objective.added_value_score + objective.loss_gain_score }}</td>
 										<td class="text-center">
 											<i class="fa fa-check" ng-if="objective.prioritized"></i>
 										</td>
