--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -35,27 +35,69 @@
 <% end %>
 <% end %>
 <div class="benefits">
-	<div class="row mb50">
-		<div class="col-md-12">
-			<h2>Benefits</h2>
+	<div class="container">
+		<div class="row mb50">
+			<div class="col-md-12">
+				<h2>Benefits</h2>
+			</div>
+		</div>
+		<div class="row mb50">
+			<div class="col-md-3">
+				<p><%= image_tag "1.png" %></p>
+				<p>Effective use for your resources</p>
+			</div>
+			<div class="col-md-3 ">
+				<p><%= image_tag "2.png" %></p>
+				<p>Minimize risks and maximize opportunities</p>
+			</div>
+			<div class="col-md-3">
+				<p><%= image_tag "3.png" %></p>
+				<p>Align advocacy width other areas and organization goals, both long and short term</p>
+			</div>
+			<div class="col-md-3">
+				<p><%= image_tag "4.png" %></p>
+				<p>Keep track and evaluate your performance</p>
+			</div>
+		</div>
+		<div class="row text_right">
+			<a class="btn btn-danger" href="#" role="button">Demo</a> <a class="btn btn-default" href="#" role="button">I want to read more about it</a>
 		</div>
 	</div>
+</div>
+<div class="testimonial">
+<div class="container">
 	<div class="row">
-		<div class="col-md-3">
-			<p><%= image_tag "1.png" %></p>
-			<p>Effective use for your resources</p>
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<%= image_tag "t1.png" %>
 		</div>
-		<div class="col-md-3 ">
-			<p><%= image_tag "2.png" %></p>
-			<p>Minimize risks and maximize opportunities</p>
-		</div>
-		<div class="col-md-3">
-			<p><%= image_tag "3.png" %></p>
-			<p>Align advocacy width other areas and organization goals, both long and short term</p>
-		</div>
-		<div class="col-md-3">
-			<p><%= image_tag "4.png" %></p>
-			<p>Keep track and evaluate your performance</p>
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<p class="cita">Align advocacy width other areas and organization goals, both long and short term</p>
+			<p>UNICEF Ambassador Matt Dawson</p>
 		</div>
 	</div>
+</div>
+<div class="t2">
+<div class="container">
+	<div class="row">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<p class="cita">“Align advocacy width other areas and organization goals, both long and short term”</p>
+			<p>Unicef Goodwill Ambassador Angélique Kidjo</p>
+		</div>
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<%= image_tag "t2.png" %>
+		</div>
+	</div>
+</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<%= image_tag "t3.png" %>
+		</div>
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<p class="cita">“Align advocacy width other areas and organization goals, both long and short term”</p>
+			<p>Meiraf Abebe, Education Officer for UNICEF Gambella</p>
+		</div>
+	</div>
+</div>
 </div>
