--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -31,10 +31,11 @@
           </thead>
           <tbody>
             <tr title="{{ project.description | limitTo: 140 }}" ng-repeat="project in projects">
-              <td>{{ project.title }}</td>
+              <td><a href="/projects/{{ project.id }}" target="_self">{{ project.title }}</a></td>
               <td>{{ project.focus_area }}</td>
-              <td>
+              <td class="controllers">
                 <i class="fa fa-gears" ng-click="add_edit_project(project)"></i>
+                <i class="fa fa-user-plus" ng-click="user_permission(project)"></i>
                 <a href="/projects/{{ project.id }}" target="_self"><i class="fa fa-edit"></i></a>
                 <i class="fa fa-eye" ng-click=""></i>
                 <i class="fa fa-trash" ng-click="delete_project(project)"></i>
@@ -49,6 +50,7 @@
     </div>
 
     <%= render "project_modal" %>
+    <%= render "user_permission_modal" %>
   </div>
 </div>
 
