--- a/app/views/objectives/_asks_modal.html.erb
+++ b/app/views/objectives/_asks_modal.html.erb
@@ -13,6 +13,10 @@
         <label for="ask"><%= t('.ask') %></label>
         <textarea name="description" class="form-control" rows="3" ng-model="current_ask.description" placeholder="<%= t('.ask_placeholder') %>"></textarea>
       </div>
+      <div class="form-group">
+        <label for="execution"><%= t('.execution') %></label>
+        <input type="checkbox" name="execution" class="form-control" ng-model="current_ask.execution"></input>
+      </div>
     </form>
   </div>
   <div class="modal-footer">
