--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,32 +3,27 @@
     <div class="row banner">
       <div class="container">
         <div class="col-md-6 mtb40">
-          <h2>What is the Advocacy Wizard?</h2>
-          <p>It's a tool that will help your organization create a strategic plan for achieving your advocacy objectives. It provides a methodology for planning, and specific tools for facilitating each of the planning steps.</p>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</h2>
         </div>
-        <div class="col-md-4 col-md-offset-2 bg-info mtb40">
-          <h3>Sign Up</h3>
+        <div class="col-md-4 col-md-offset-2 mtb40">
+          <h3>Sign up</h3>
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
               <% flash.each do |name, msg| %>
                 <%= content_tag :div, msg, class: 'error' if msg.is_a?(String) %>
               <% end %>
               <div class="form-group">
-                <%= f.label :email %>
-                <%= f.email_field :email, required: true, class: "form-control" %>
+                <%= f.email_field :email, required: true, class: "form-control", placeholder: "Email" %>
               </div>
               <div class="form-group">
-                <%= f.label :password %><br />
-                <%= f.password_field :password, required: true, class: "form-control" %>
+                <%= f.password_field :password, required: true, class: "form-control", placeholder: "Password" %>
               </div>
               <div class="form-group">
-                <%= f.label :password_confirmation %><br />
-                <%= f.password_field :password_confirmation, required: true, class: "form-control" %>
+                <%= f.password_field :password_confirmation, required: true, class: "form-control", placeholder: "Confirm Password" %>
               </div>
-              <div>
-                <%= f.submit "Sign up", class: "btn btn-success" %>
+              <div class="text-right">
+                <%= f.submit "Start now!", class: "btn btn-danger" %>
               </div>
             <% end %>
-            <%= render "devise/shared/links" %>
         </div>
       </div>
     </div>
@@ -67,36 +62,53 @@
 <div class="testimonial">
 <div class="container">
 	<div class="row">
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<%= image_tag "t1.png" %>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<p class="cita">Align advocacy width other areas and organization goals, both long and short term</p>
-			<p>UNICEF Ambassador Matt Dawson</p>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<table>
+				<tr>
+					<td>
+						<%= image_tag "t1.png" %>
+					</td>
+					<td class="text-right">
+						<p class="cita">Align advocacy width other areas and organization goals, both long and short term</p>
+						<p>UNICEF Ambassador Matt Dawson</p>
+					</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </div>
 <div class="t2">
 <div class="container">
 	<div class="row">
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<p class="cita">“Align advocacy width other areas and organization goals, both long and short term”</p>
-			<p>Unicef Goodwill Ambassador Angélique Kidjo</p>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<%= image_tag "t2.png" %>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<table>
+				<tr>
+					<td>
+						<p class="cita">“Align advocacy width other areas and organization goals, both long and short term”</p>
+						<p>Unicef Goodwill Ambassador Angélique Kidjo</p></td>
+					<td>
+						<%= image_tag "t2.png" %>
+					</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </div>
 </div>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<%= image_tag "t3.png" %>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<p class="cita">“Align advocacy width other areas and organization goals, both long and short term”</p>
-			<p>Meiraf Abebe, Education Officer for UNICEF Gambella</p>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<table>
+				<tr>
+					<td>
+						<%= image_tag "t3.png" %>
+					</td>
+					<td class="text-right">
+						<p class="cita">Align advocacy width other areas and organization goals, both long and short term</p>
+						<p>UNICEF Ambassador Matt Dawson</p>
+					</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </div>
