cambio color tabs

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -195,8 +195,8 @@ footer a {
   margin-right: 5px;
 }
 .nav-tabs>li>a, .nav-tabs>li>a:hover, .nav-tabs>li>a:focus {
-  border: 1px solid #62b9b0;
-  background-color: #62b9b0;
+  border: 1px solid #0091ea;
+  background-color: #0091ea;
   color: #ffffff;
   font-weight: 600;
   text-transform: uppercase;
