cambio color alerta

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -80,8 +80,8 @@ label {
     font-weight: 300;
 }
 .alert-info {
-  background-color: #62b9b0;
-  border-color: #62b9b0;
+  background-color: #0091EA;
+  border-color: #0091EA;
   color: #fff;
   margin: 30px 0;
 }
