cambio color icos acciones

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -359,7 +359,7 @@ div#resources_paginate {
 }
 table .fa-pencil-square-o, table .fa-trash {
   cursor: pointer;
-  color: #E2534B;
+  color: #0091EA;
 }
 
 .dropdown-menu.dropdown-menu-button {
